# ros2-perception-pipeline-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
data/test_images/: IMG_4117.HEIC  IMG_4118.HEIC  IMG_4119.HEIC
docker/: Dockerfile
src/perception_demo/: package.xml  setup.cfg  setup.py
src/perception_demo/perception_demo/: __init__.py  camera_sim_node.py  camera_webcam_node.py  depth_node.py  detector_node.py
src/perception_demo/perception_demo/nodes/: __init__.py
src/perception_demo/perception_demo/nodes/camera/: __init__.py  base.py  sim.py  webcam.py
src/perception_demo/perception_demo/nodes/depth/: __init__.py  midas.py
src/perception_demo/perception_demo/nodes/detector/: __init__.py  yolo.py
src/perception_demo/perception_demo/nodes/grasp/: __init__.py  grasp_node.py
src/perception_demo/perception_demo/nodes/object_estimator/: __init__.py  object_estimator_node.py
src/perception_demo/perception_demo/nodes/pose/: __init__.py  pose_node.py
src/perception_demo/perception_demo/nodes/teleop/: __init__.py  teleop_arm.py
src/perception_demo/perception_demo/nodes/tracker/: __init__.py  yolo_tracker.py
src/perception_demo/perception_demo/nodes/viz/: __init__.py  viz_node.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controllers.yaml
src/robot_description/launch/: simulation.launch.py
src/robot_description/urdf/: robot.urdf.xacro
src/robot_description/worlds/: shelf.world  shelf_realistic.world
